<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- android:background="@drawable/dialog_bg"-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/users_filter"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:text="@string/user_role"
                android:textSize="20sp"
                android:gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:tag="Tipuri"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_yes"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/button_filter_users"
                android:textSize="18sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_no"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/button_cancel"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>