<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp">

        <ImageView
            android:id="@+id/property_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="Imagine proprietate"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="10dp"
            android:id="@+id/title_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:inputType="text"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/select_rent_client"
            android:textSize="20sp" />

        <Spinner
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:id="@+id/clientSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />


        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finish_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/button_finish"
                android:textSize="14sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>